--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -10,12 +10,10 @@
     android:layout_height="match_parent">
 
 
-
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recy"
-        android:layout_width="419dp"
-        android:layout_height="593dp"
+        android:layout_width="415dp"
+        android:layout_height="679dp"
         android:clickable="true"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,8 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.369"
-        tools:listitem="@layout/fragment_item"
-        >
+        tools:listitem="@layout/fragment_item">
 
     </androidx.recyclerview.widget.RecyclerView>
 
