--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -75,6 +75,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
+                android:backgroundTint="#A1887F"
                 android:id="@+id/im_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
